--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
   "name": "xsound",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "HTML5 Web Audio API Library",
   "main": "build/xsound.min.js",
+  "scripts": {
+    "jshint": "grunt hint",
+    "build": "grunt build",
+    "test": "karma start",
+    "watch": "grunt observe",
+    "default": "grunt"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Korilakkuma/XSound.git"
   },
   "keywords": [
-    "Web Audio API",
-    "JavaScript",
     "XSound.js",
-    "XSound"
+    "XSound",
+    "JavaScript",
+    "HTML5",
+    "Web Audio API",
+    "Library"
   ],
   "author": "Korilakkuma <rilakkuma.san.xjapan@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Korilakkuma/XSound/issues"
   },
-  "homepage": "https://github.com/Korilakkuma/XSound",
+  "homepage": "https://korilakkuma.github.io/XSound/",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-closurecompiler": "^0.9.9"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-uglify": "^0.9.2",
+    "grunt-contrib-watch": "^0.6.1",
+    "jasmine-core": "^2.3.4",
+    "karma": "^0.13.9",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-cli": "^0.1.0",
+    "karma-jasmine": "^0.3.6"
   }
 }
